
Tue Aug 16 20:51:27 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - driver.list: add Soyntec Sekury C 500 and C 800 support using
   the powermust driver (contributed by Hanno Borns)

Tue Aug 16 11:53:44 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - gamatronic: revive the sec driver as gamatronic to support officialy
   the Gamatronic models MP110/210, MS-T, MS and µPS3/1.

   (Gamatronic, Nadav Moskovitch)

 - driver.list: add old sec compatibilities with gamatronic, which
   are Clary ST-800 and various SEC protocol compatible units.

 - README for hotplug scripts updated a bit.

Thu Aug 11 09:21:41 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - genericups type 22: add Gamatronic UPSs with alarm interface

   (Gamatronic, Nadav Moskovitch) [Alioth Patch #302015]

 - Drivers now don't chroot to statepath if called for power off
   (using -k). This avoid unneeded failure to poweroff the UPS if
   /var is umounted (thanks to Gaspar Bakos).

Wed Aug 10 08:47:01 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 * newhidups: 
   - enhance DumpTree, by adding data type and current value
   - verify setability/RW of data at setinfo() time
   - bump release to 0.27

Thu Aug 09 09:11:52 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - mge-shut: enhance ups.model retrieving, and bump release to 0.65

Wed Aug 03 09:11:52 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - newhidups: add basic Belkin recognition, and bump release to 0.26

Mon Aug 01 13:51:08 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - newhidups: better handling of the status clearing for LB, and bump
   release to 0.25
 
Wed Jul 27 07:08:01 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 * CGI
   - add NUT HTML interface to ease the access to the various CGI
     scripts (thanks to Dave Breiland for relanching that idea).
     This one has to be configured with --with-htmlpath and is
     installed by default by "make install-cgi".